--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -106,6 +106,23 @@
             }
           }
         }
+      },
+      "technical_skills_title": "TECHNICAL SKILLS",
+      "languages": {
+        "title": "LANGUAGES",
+        "spanish_level": "Spanish: Native",
+        "english_level": "English: Advanced Reading / Oral B1"
+      },
+      "higher_education_title": "HIGHER EDUCATION",
+      "higher_education": {
+        "1": {
+          "degree": "Systems Analyst",
+          "institution": "National University of Lujan"
+        },
+        "2": {
+          "degree": "Advanced Programmer",
+          "institution": "I.S.F.D. y T. Nº 189"
+        }
       }
     }
   }
