--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -106,6 +106,23 @@
             }
           }
         }
+      },
+      "technical_skills_title": "HABILIDADES TÉCNICAS",
+      "languages": {
+        "title": "IDIOMAS",
+        "spanish_level": "Español: Nativo",
+        "english_level": "Inglés: Comprensión lectora avanzada / Oral B1"
+      },
+      "higher_education_title": "EDUCACIÓN SUPERIOR",
+      "higher_education": {
+        "1": {
+          "degree": "Analista de Sistemas",
+          "institution": "Universidad Nacional de Lujan"
+        },
+        "2": {
+          "degree": "Programador Superior",
+          "institution": "I.S.F.D. y T. Nº 189"
+        }
       }
     }
   }
