--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -125,5 +125,39 @@
         }
       }
     }
+  },
+  "about_portfolio_content": {
+    "sections": [
+      {
+        "title": "La idea",
+        "paragraphs": {
+          "1": "A lo largo de mi carrera profesional he estado en constante búsqueda de nuevas formas de innovar y destacar no solo mis habilidades técnicas, sino también mi enfoque en la experiencia del usuario.",
+          "2": "Siempre he creído que un portfolio debe ser más que una simple recopilación de proyectos.",
+          "3": "Fue esta combinación de factores lo que me llevó a desarrollar un portfolio interactivo, ofreciendo una experiencia distinta tanto en desktop como en dispositivos móviles.",
+          "4": "Quería algo que no solo presentara mi trabajo, sino que involucrara a los visitantes de una manera más dinámica e inmersiva. La idea fue trasladar la familiaridad que todos tenemos con nuestras propias computadoras y celulares, haciendo que la navegación fuera intuitiva y, al mismo tiempo, divertida."
+        }
+      },
+      {
+        "title": "Experiencia Desktop",
+        "paragraphs": {
+          "1": "En la versión desktop, los usuarios se encuentran con un entorno que replica una computadora de escritorio. Cada sección está representada como un programa diferente que puede abrirse y explorarse.",
+          "2": "Desde el primer momento, los visitantes ven un escritorio con íconos que representan cada sección clave y un dock que facilita la navegación y la sensación de estar realmente interactuando con una computadora. Uno de los 'programas' es mi CV, donde he presentado parte de mi trayectoria profesional; en Documentos, se puede visualizar y descargar una versión en PDF de mi currículum, lo que facilita que tengan una copia física o digital de mi experiencia y habilidades. Otra sección es la carpeta de imágenes, donde he recopilado imagenes de varias de las tecnologías que domino, brindando una vista rápida de mis capacidades técnicas. Además se puede encontrar en el escritorio un icono para contactarme.",
+          "3": "He querido ofrecer también la posibilidad de personalizar la experiencia, incluyendo opciones de configuración que permiten cambiar el fondo de pantalla, modificar el esquema de colores para adaptarse a diferentes preferencias visuales, seleccionar el idioma de navegación y agregar o quitar widgets del escritorio (Por el momento solo el clima pero ire aregando nuevos)."
+        }
+      },
+      {
+        "title": "Experiencia Móvil",
+        "paragraphs": {
+          "1": "Cuando pensé en cómo adaptar esta experiencia a dispositivos móviles, me di cuenta de que necesitaba un enfoque que mantuviera el concepto central de interacción, pero que también respetara las limitaciones y oportunidades de las pantallas más pequeñas. Así, en la versión mobile, trasladé el concepto de la computadora a una emulación de la interfaz de un celular. Esto no solo preserva la idea de interactividad, sino que también garantiza que el portfolio sea accesible y usable en cualquier dispositivo, lo que es crucial en un mundo donde el tráfico móvil sigue creciendo.",
+          "2": "La versión mobile ofrece una navegación sencilla y mantiene las opciones de personalización, asegurando que los usuarios tengan una experiencia tan rica y ajustada a sus preferencias como en la versión desktop."
+        }
+      },
+      {
+        "title": "Conclusión",
+        "paragraphs": {
+          "1": " A través de este portafolio, no solo he querido mostrar lo que sé hacer, sino también cómo lo hago, destacando mi enfoque en la experiencia del usuario, la adaptabilidad, y la capacidad de transformar ideas en productos digitales que son tanto funcionales como visualmente atractivos."
+        }
+      }
+    ]
   }
 }
