--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -3,7 +3,7 @@
   "contact": "Contacto",
   "about_this_proyect": "Acerca de este proyecto",
   "documents": "Documentos",
-  "images": "Imagenes",
+  "images": "Imágenes",
   "preferences": "Preferencias",
   "wallpaper": "Fondo de pantalla",
   "appearence": "Apariencia",
@@ -13,6 +13,15 @@
   "es_language": "Español",
   "it_language": "Italiano",
   "weather": "Clima",
+  "details": "Detalles",
+  "name": "Nombre",
+  "email": "Email",
+  "subject": "Asunto",
+  "send_message": "Enviar Mensaje",
+  "name_field_is_required": "El nombre es obligatorio",
+  "email_field_is_required": "El email es obligatorio",
+  "subject_field_is_required": "El asunto es obligatorio",
+  "invalid_email": "El Email no es valido",
 
   "cv_content": {
     "sections": {
@@ -127,8 +136,8 @@
     }
   },
   "about_portfolio_content": {
-    "sections": [
-      {
+    "sections": {
+      "the_idea": {
         "title": "La idea",
         "paragraphs": {
           "1": "A lo largo de mi carrera profesional he estado en constante búsqueda de nuevas formas de innovar y destacar no solo mis habilidades técnicas, sino también mi enfoque en la experiencia del usuario.",
@@ -137,7 +146,7 @@
           "4": "Quería algo que no solo presentara mi trabajo, sino que involucrara a los visitantes de una manera más dinámica e inmersiva. La idea fue trasladar la familiaridad que todos tenemos con nuestras propias computadoras y celulares, haciendo que la navegación fuera intuitiva y, al mismo tiempo, divertida."
         }
       },
-      {
+      "desktop_experience": {
         "title": "Experiencia Desktop",
         "paragraphs": {
           "1": "En la versión desktop, los usuarios se encuentran con un entorno que replica una computadora de escritorio. Cada sección está representada como un programa diferente que puede abrirse y explorarse.",
@@ -145,19 +154,22 @@
           "3": "He querido ofrecer también la posibilidad de personalizar la experiencia, incluyendo opciones de configuración que permiten cambiar el fondo de pantalla, modificar el esquema de colores para adaptarse a diferentes preferencias visuales, seleccionar el idioma de navegación y agregar o quitar widgets del escritorio (Por el momento solo el clima pero ire aregando nuevos)."
         }
       },
-      {
+      "mobile_experience": {
         "title": "Experiencia Móvil",
         "paragraphs": {
           "1": "Cuando pensé en cómo adaptar esta experiencia a dispositivos móviles, me di cuenta de que necesitaba un enfoque que mantuviera el concepto central de interacción, pero que también respetara las limitaciones y oportunidades de las pantallas más pequeñas. Así, en la versión mobile, trasladé el concepto de la computadora a una emulación de la interfaz de un celular. Esto no solo preserva la idea de interactividad, sino que también garantiza que el portfolio sea accesible y usable en cualquier dispositivo, lo que es crucial en un mundo donde el tráfico móvil sigue creciendo.",
           "2": "La versión mobile ofrece una navegación sencilla y mantiene las opciones de personalización, asegurando que los usuarios tengan una experiencia tan rica y ajustada a sus preferencias como en la versión desktop."
         }
       },
-      {
+      "conclusion": {
         "title": "Conclusión",
         "paragraphs": {
           "1": " A través de este portafolio, no solo he querido mostrar lo que sé hacer, sino también cómo lo hago, destacando mi enfoque en la experiencia del usuario, la adaptabilidad, y la capacidad de transformar ideas en productos digitales que son tanto funcionales como visualmente atractivos."
         }
+      },
+      "technologies": {
+        "title": "Tecnologías"
       }
-    ]
+    }
   }
 }
