--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -22,6 +22,8 @@
   "email_field_is_required": "L'email è obbligatoria",
   "subject_field_is_required": "L'oggetto è obbligatorio",
   "invalid_email": "Email non valida",
+  "loading": "Caricando",
+  "signIn": "Accedi",
   "intro_content": {
     "paragraphs": {
       "1": "Ciao! Mi chiamo Pablo Tilli",
