--- a/src/locales/es/translation.json
+++ b/src/locales/es/translation.json
@@ -9,6 +9,7 @@
   "appearence": "Apariencia",
   "language": "Idioma",
   "widgets": "Widgets",
+  "fileExplorer": "Explorador de archivos",
   "en_language": "Inglés",
   "es_language": "Español",
   "it_language": "Italiano",
