--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -14,6 +14,7 @@
   "it_language": "Italiano",
   "weather": "Meteo",
   "details": "Dettagli",
+  "fileExplorer": "Esplora file",
   "name": "Nome",
   "email": "Email",
   "subject": "Oggetto",
